[tool.poetry]
name = "enxima"
version = "0.1.0"
description = ""
authors = ["bear <xxrBear@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
enxima = "enxima.main:app"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
